# rockstor-core

./: .env  .eslintignore  .eslintrc.js  .gitignore  .travis.yml  AUTHORS  README.md  base-buildout.cfg  bootstrap.py  build.sh  buildout.cfg  gulpfile.js  manage.py  prod-buildout.cfg  pyproject.toml  setup.py  test-buildout.cfg  testing.cfg
.github/: dependabot.yml
.github/workflows/: test.yml  trigger_updates.yml
.run/: rock-runserver.run.xml  rock-tests.run.xml
ansible/: README.md  Rockstor.yml  ansible.cfg
ansible/inventory/: hosts
ansible/roles/rockstor_installer/: README.md
ansible/roles/rockstor_installer/defaults/: main.yml
ansible/roles/rockstor_installer/meta/: main.yml
ansible/roles/rockstor_installer/tasks/: btrfs_experimental.yml  ipv6_disable.yml  main.yml  packages.yml  rockstor.yml  services.yml  shells.yml
ansible/roles/rockstor_installer/vars/: main.yml
certs/: rockstor.cert.cert  rockstor.cert.key
conf/: 30-rockstor-nginx-override.conf  64-btrfs.rules  90-default.preset  PermitRootLogin  ROCKSTOR-GPG-KEY  avahi-smb.service.in  backup.sql.in  backupdb.in  datastore.in  django-hack  django-hack.py  docker-distroid-notes.service.txt  docker-opensuse-leap.service  docker-opensuse-tumbleweed.service  docker.service  docker.service.in  docker.socket  dummy-ups.dev  gunicorn.conf.py  gunicorn.in  nginx-centos.conf.in  nginx-prod.conf.in  nginx.conf  nginx.conf.in  pg_hba.conf  postgresql.conf  postgresql_setup.sql  postgresql_tune.sql  rc.local  rockstor-bootstrap.service  rockstor-bootstrap.service.in  rockstor-build.service  rockstor-hdparm.service  rockstor-ipv6check.service  rockstor-nginx-override.conf  rockstor-pre.service  rockstor-pre.service.in  rockstor-prod.service.in  rockstor.service  rockstor.service.in  (+19 more)
etc/: supervisord.conf
etc/init.d/: gunicorn
etc/nginx/: mime.types  nginx.conf
src/rockstor/: datastore  docker_wrapper.py  initrock.py  mgmt_ip.py  ovpn_util.py  prep_db.py  pwreset.py  qgroup_clean.py  settings.py  smartdb  urls.py  wsgi.py
src/rockstor/backup/: db_router.py  scheduler.py  serializers.py  urls.py  util.py  worker.py
src/rockstor/backup/migrations/: 0001_initial.py  0002_auto__add_field_backuppolicy_enabled__del_unique_backuppolicy_source_i.py  0002_auto__add_policytrail__add_field_backuppolicy_enabled__del_unique_back.py  0002_auto__add_policytrail__add_field_backuppolicy_notification_level__add_.py  0003_auto__add_policytrail.py  0004_auto__add_field_policytrail_status__add_field_policytrail_snap_created.py  0005_auto__del_unique_backuppolicy_notify_email.py
src/rockstor/backup/models/: __init__.py  backup_policy.py
src/rockstor/backup/views/: __init__.py  backup_policy.py  generic_view.py  plugin.py  policy_trail.py
src/rockstor/cli/: __init__.py  api_keys.py  api_wrapper.py  backup_plugin_console.py  base_console.py  disks_console.py  iscsi_console.py  network_console.py  nfs_console.py  nfs_export_console.py  nis_console.py  ntp_console.py  pool_detail_console.py  pools_console.py  replication_console.py  rest_util.py  rock_cli.py  services_console.py  setup_console.py  sftp_console.py  share_detail_console.py  share_iscsi_console.py  share_nfs_console.py  share_smb_console.py  shares_console.py  sm_console.py  smb_console.py  snapshot_console.py  support_console.py  task_console.py  users_console.py
src/rockstor/fs/: btrfs.py  pool_balance.py  pool_scrub.py  zfs.py
src/rockstor/fs/tests/: test_btrfs.py
src/rockstor/rest_framework_custom/: __init__.py  custom_pagination.py  generic_sprobe.py  generic_view.py  oauth_wrapper.py  renderers.py
src/rockstor/scripts/: __init__.py  bootstrap.py  config_backup.py  db_upgrade.sh  debugmode.py  delete_api_key.py  docker_wrapper.py  dump-smart.sh  flash_optimize.py  initrock.py  min_set.py  mount_share.py  ovpn_util.py  prep_db.py  pwreset.py  qgroup_clean.py  qgroup_maxout_limit.py  qgroup_test.py  rockon_delete.py  rockon_util.py
src/rockstor/scripts/scheduled_tasks/: crontabwindow.py  pool_scrub.py  reboot_shutdown.py  send_replica.py  snapshot.py
src/rockstor/scripts/tests/: test_reboot_shutdown.py
src/rockstor/smart_manager/: admin.py  data_collector.py  db_router.py  dc2.py  models.py  procfs.py  serializers.py  services.py  smd.py  stap.py  stap_dispatcher.py  stap_worker.py  sysfs.py
src/rockstor/smart_manager/agents/: __init__.py  (+1 more)
src/rockstor/storageadmin/: admin.py  auth.py  exceptions.py  forms.py  middleware.py  models.py  pools.py  serializers.py  shares.py  snapshot.py  tasks.py  util.py  validators.py  views.py
src/rockstor/system/: acl.py  config_backup.py  constants.py  directory_services.py  docker.py  email_util.py  exceptions.py  iscsi.py  luks.py  network.py  nis.py  nut.py  osi.py  pinmanager.py  pkg_mgmt.py  rockon.py  samba.py  services.py  shell.py  smart.py  snapper.py  snmp.py  ssh.py  tailscale.py  users.py  util.py
src/rockstor/websocket_client/: cpu_info.py
test/: api_tests.sh  test_addPool.txt
test/cli/: #add_share.sh#
test/selenium/: ad_services  addpool1_disk1  addpool1_disk2_raid10  addpool1_disk3_raid0  addpool1_raid0.html  addpool1_raid1.html  addpool1_raid10  addpool_10disks_raid0  addpool_10disks_raid1  addpool_10disks_raid10  addpool_1disk_raid0  addpool_1disk_raid1  addpool_1disk_raid10  addpool_2disks_raid10  addpool_2pools_2disks_raid0  addpool_3disks_raid10  addpool_raid0_10disks  addshare_2pools_2disks_raid0  addshare_pool_raid0  addshare_withoutpool  dashboard_setup_disks  deletepool1_disk3_raid0  deletepool1_raid0.html  deletepool1_raid1  deletepool1_raid10  deletepool_2pools_raid0  deletepool_raid0  deleteshare_2pools_2disks_raido  diskpage_setup  invalidpoolname  iscsi_services  ldap_services  login_happypath.html  login_invalid_password.html  login_invalid_username  login_suite  login_unhappypath.html  morethan32_poolname_raid0  newappliance_setup  newdashboard  (+14 more)
test/webdriver/: config.yaml  login.py  login_happypath.py  login_invalid_username.py  login_suite.py  rockstor_testcase.py  util.py
vagrant_env/: README.md  Vagrantfile  alias_rc  build.sh  build_rockstor.sh
(+1105 files in other folders)
